k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: beatwave-backend-deployment
  namespace: beatwave
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: beatwave-backend-pod
      namespace: beatwave
      labels:
        app: backend
    spec:
      containers:
      - name: beatwave-backend
        image: ghcr.io/kunal-511/beatwave-backend:v0.0.1
        ports:
        - containerPort: 5000
