k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beatwave-frontend-deployment
  namespace: beatwave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: beatwave-frontend-pod
      namespace: beatwave
      labels:
        app: frontend
    spec:
      containers:
      - name: beatwave-frontend
        image: kunal245/beatwave-frontend:latest
        ports:
        - containerPort: 3000
