k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: beatwave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:   
      - name : redis
        image: redis:7.2-alpine
        ports:
        - containerPort: 6379
        commands: ["redis-server", "--appendonly", "yes"]
