k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: beatwave
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 80
